# fullauto

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
src/: ai.py  comm_service.py  config_store.py  logs.py  main.py  memory.py  schema.py
src/tasks/: .config.json  cleanup.md  feature_inventor.md  features.md  health_check.md  increment.md  issue_fixer.md  maintenance.md  pr_review.md  refactor.md  security_check.md
tests/: conftest.py  test_ai.py  test_comm_service.py  test_logs.py  test_main.py  test_memory.py  test_schema.py
